refactor: use modern api